# merfishtools

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  setup.py
evaluation/: Snakefile  config.yaml  environment.yaml  requirements.txt
evaluation/codebook/: 1001genesData.txt  140genesData.2.txt  simulated-MHD4.txt
evaluation/data/: 1001genes.2.codebook.txt  1001genesData.csv.bz2  140genes.1.codebook.txt
evaluation/scripts/: cell-properties.py  cell-size.py  codebook-neighbors.py  experiment-diffexp.py  expression-matrix.py  format-dataset.py  go-enrichment.R  normalize.py  plot-correlation.py  plot-dataset-correlation.py  plot-expression-pmf.py  plot-foldchange-cdf.py  plot-go-enrichment.py  plot-multidiffexp.py  plot-neighbor-bias.py  plot-pca.py  plot-qq.py  plot-simulation-pmf.py  plot-simulation.py  plot-tsne.py  raw-counts.py  simulate-counts.py
merfishtools/: __init__.py  cdf.py  estimates.py  expression.py  foldchange.py  utils.py
src/: cli.rs  cli.yaml  codebook.rs  error_rates.rs  lib.rs  main.rs  simulation.rs
src/io/: codebook.rs  common.rs  counts.rs  expression.rs  foldchange.rs  merfishdata.rs  mod.rs  pmf.rs  simple_codebook.rs
src/io/cdf/: diffexp.rs  expression.rs  mod.rs
src/io/estimation/: differential_expression.rs  expression.rs  mod.rs
src/io/merfishdata/: binary.rs  common.rs  mod.rs  sim.rs  tsv.rs
src/model/: cv.rs  diffexp.rs  dist.rs  expression.rs  expressionset.rs  foldchange.rs  meanvar.rs  mod.rs  pmf.rs  readout.rs
test/: Snakefile  config.yaml  requirements.txt
test/codebook/: simulated-MHD4.txt
test/data/: 1001genes.1.codebook.txt  140genes.2.codebook.txt
test/dot/: all.dot  pruned.dot
test/expression_cdf/: 2.txt
test/scripts/: count-matrix.py  cvplot.py  expression-matrix.py  expression_dist.py  format-dataset.py  plot-codebook-neighbors.py  plot-correlation.py  plot-expression-dist.py  plot-expression-pmf.py  plot-foldchange-cdf.py  plot-overdispersion.py  plot-pca.py  plot-simulation.py  raw-counts.py  simulate-counts.py  sparse_pca.py
tests/: lib.rs
tests/codebook/: 1001genesData.txt  real-MHD4v2.txt  simulated-MHD2-8.txt  simulated-MHD2.txt  simulated-MHD4.txt
tests/data/: 1001genesData.3.cell0.txt  140genesData.1.cell0.txt  140genesData.1.cell24.txt  collect-readouts.ipynb  simulated-MHD4.35.1.txt
tests/expression_cdf/: 1.txt  3.txt
(+24 files in other folders)
