[package]
name = "merfishtools"
version = "1.2.0"
authors = ["Johannes Koester <johannes.koester@tu-dortmund.de>"]

[dependencies]
bio = { git = "https://github.com/rust-bio/rust-bio.git" } # "0.14.*"
regex = "0.1.*"
bit-set = "0.4.*"
csv = "0.14.*"
nalgebra = "0.5.1"
itertools = "0.5.*"
num = "0.1.*"
rustc-serialize = "0.3.*"
argparse = "0.2.*"
log = "0.3.*"
fern = "0.3.*"
cue = "0.1.*"
GSL = "0.4"
ordered-float = "0.5"
approx = "0.1.*"
fnv = "1.0.*"
clap = {version = "2.26", features = ["yaml", "color", "suggestions"]}
rand = "0.3"
ndarray = "0.9"
bit-vec = "0.4"
petgraph = "0.4"

[[bin]]
name = "merfishtools"
test = false
doc = false
