[package]
name = "merfishtools"
version = "1.3.0"
authors = ["Johannes Koester <johannes.koester@tu-dortmund.de>"]

[dependencies]
bio = "0.14"
regex = "0.1"
bit-set = "0.4"
csv = "1.0"
nalgebra = "0.5.1"
itertools = "0.5"
num = "0.1"
rustc-serialize = "0.3"
argparse = "0.2"
log = "0.3"
fern = "0.3"
cue = "0.1"
GSL = "1.0"
ordered-float = "0.5"
approx = "0.1"
fnv = "1.0"
clap = {version = "2.26", features = ["yaml", "color", "suggestions"]}
rand = "0.3"
ndarray = "0.10"
ndarray-rand = "0.6"
bit-vec = "0.4"
petgraph = "0.4"
serde = "1.0"
serde_derive = "^1.0.71"
serde_with = "0.2"
bincode = "1.0"
failure = "0.1"
failure_derive = "0.1"
derive_builder = "0.5"
byteorder = "1.2"
