[package]
name = "merfishtools"
version = "1.5.0"
authors = ["Johannes Koester <johannes.koester@tu-dortmund.de>"]
edition = "2018"

[dependencies]
bio = "0.26"
regex = "1.1"
bit-set = "0.5"
bit-vec = "0.6"
csv = "1.0"
nalgebra = "0.18"
itertools = "0.8"
num = "0.2"
argparse = "0.2"
log = "0.4"
fern = "0.5"
cue = "0.1"
GSL = "1.1"
ordered-float = "1.0"
approx = "0.3"
fnv = "1.0"
clap = {version = "2.33", features = ["yaml", "color", "suggestions"]}
rand = "0.6"
ndarray = "0.12"
ndarray-rand = "0.9"
ndarray-parallel = "0.9"
petgraph = ">=0.4.13"
serde = "1.0"
serde_derive = "1.0"
serde_with = "1.3"
bincode = "1.1"
failure = "0.1"
failure_derive = "0.1"
derive_builder = "0.7"
byteorder = "1.3"
structopt = "0.2"
rayon = "1.0"
maplit = "1.0"
derive-new = "0.5"
num-traits = "0.2"

[[bin]]
name="barnacleboy"
path="src/bin/barnacleboy.rs"

[[bin]]
name="merfishtools"
path="src/bin/merfishtools.rs"